use longer audio

--- a/index.html
+++ b/index.html
@@ -53,63 +53,63 @@
 		<div class="audio-block">
 			<h2>40</h2>
 			<audio controls>
-  			<source src="1.wav" type="audio/wav">
+  			<source src="00000040.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>
 		<div class="audio-block">
 			<h2>1036</h2>
 			<audio controls>
-  			<source src="2.wav" type="audio/wav">
+  			<source src="00001036.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>		
 		<div class="audio-block">
 			<h2>5426</h2>
 			<audio controls>
-  			<source src="3.wav" type="audio/wav">
+  			<source src="00005426.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>
 		<div class="audio-block">
 			<h2>7140</h2>
 			<audio controls>
-  			<source src="4.wav" type="audio/wav">
+  			<source src="00007140.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>
 		<div class="audio-block">
 			<h2>8696</h2>
 			<audio controls>
-  			<source src="5.wav" type="audio/wav">
+  			<source src="00008696.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>		
 		<div class="audio-block">
 			<h2>12724</h2>
 			<audio controls>
-  			<source src="6.wav" type="audio/wav">
+  			<source src="00012724.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>		
 		<div class="audio-block">
 			<h2>22805</h2>
 			<audio controls>
-  			<source src="7.wav" type="audio/wav">
+  			<source src="00022805.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>		
 		<div class="audio-block">
 			<h2>30370</h2>
 			<audio controls>
-  			<source src="8.wav" type="audio/wav">
+  			<source src="00030370.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>		
 		<div class="audio-block">
 			<h2>33880</h2>
 			<audio controls>
-  			<source src="9.wav" type="audio/wav">
+  			<source src="00033880.wav" type="audio/wav">
 			Your browser does not support audio.
 			</audio> 
 		</div>	
